DecoupledDeployments/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
    namespace: demo-app

spec:
    type: ClusterIP
    selector:
        app: nginx
    ports:
      - port: 80
        targetPort: 80
